--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,14 @@ anyio==4.6.2.post1
 appdirs==1.4.4
 asgiref==3.8.1
 asttokens==2.4.1
+chevron==0.14.0
 click==8.1.7
 colorama==0.4.6
 comm==0.2.2
 debugpy==1.8.8
 decorator==5.1.1
 executing==2.1.0
+future==1.0.0
 h11==0.14.0
 htmltools==0.6.0
 idna==3.10
@@ -17,6 +19,7 @@ jedi==0.19.1
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 linkify-it-py==2.0.3
+lzstring==1.0.4
 markdown-it-py==3.0.0
 matplotlib-inline==0.1.7
 mdit-py-plugins==0.4.2
@@ -38,6 +41,7 @@ pyzmq==26.2.0
 questionary==2.0.1
 setuptools==75.3.0
 shiny==1.2.0
+shinylive==0.7.0
 six==1.16.0
 sniffio==1.3.1
 stack-data==0.6.3
